# openalerts

./: Makefile  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
node/: .gitignore  README.md  package-lock.json  package.json
node/src/: cli.ts  config.ts
node/src/channels/: console.ts  feishu.ts
node/src/channels/__tests__/: feishu.test.ts
node/src/core/: evaluator.ts  formatter.ts  rules.ts  store.ts  types.ts
node/src/core/__tests__/: formatter.test.ts
node/src/db/: index.ts  queries.ts  schema.ts
node/src/db/__tests__/: queries.test.ts
node/src/mcp/: client.ts  index.ts  resources.ts  tools.ts
node/src/readers/: openclaw.ts
node/src/server/: dashboard.ts  sse.ts
node/src/watchers/: gateway-adapter.ts  gateway.ts
python/: README.md  pyproject.toml
python/src/: __init__.py
python/src/adapters/: base.py  crewai.py  nanobot.py  openmanus.py
python/src/channels/: feishu.py
python/src/collections/: __init__.py  collection_manager.py  persistence.py  types.py
python/src/core/: config.py  engine.py  evaluator.py  rules.py  types.py
python/src/dashboard/: html.py  server.py
python/tests/: conftest.py  test_feishu_channel.py
standalone/: .gitignore  README.md  package-lock.json  package.json
standalone/src/: config.ts
standalone/src/channels/: telegram.ts  webhook.ts
standalone/src/core/: alert-channel.ts  bounded-map.ts  engine.ts  evaluator.ts  event-bus.ts  formatter.ts  rules.ts  types.ts
standalone/src/server/: dashboard.ts  index.ts  routes.ts
standalone/src/watchers/: files.ts
